--- a/.github/workflows/samples-windows.yml
+++ b/.github/workflows/samples-windows.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                java_version: [9, 10, 11, 12, 13, 14]
+                java_version: [9, 11, 14]
 
         steps:
             -   uses: actions/checkout@v2
