prepare dev cycle of 0.16.0

--- a/gradle/scripts/gh-pages.gradle
+++ b/gradle/scripts/gh-pages.gradle
@@ -25,7 +25,12 @@ task removeGhPages {
 }
 
 task ghPages {
-//    dependsOn removeGhPages
+    docProjects.forEach { subProject ->
+        def jar = subProject.tasks.findByName("jar")
+        dependsOn jar
+        dokka.mustRunAfter jar
+    }
+    dependsOn removeGhPages
     dependsOn dokka
     dokka.mustRunAfter removeGhPages
     finalizedBy copyCSS
