--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    rootProject.version = '0.15.0'
+    rootProject.version = '0.16.0-SNAPSHOT'
     rootProject.group = 'ch.tutteli.atrium'
 
     def toolProjectsFun = subprojects.findAll {
@@ -58,7 +58,7 @@ buildscript {
         ghPages_version = rootProject.version
         srcKotlin = 'src/main/kotlin'
         github_url = "https://github.com/robstoll/${rootProject.name}"
-        dokka_sourceMapping = "tree/v0.15.0"
+        dokka_sourceMapping = "tree/master"
 
 
         toolProjects = toolProjectsFun
@@ -536,7 +536,7 @@ Release & deploy a commit
 Either use the following commands or the manual steps below
 
 export ATRIUM_PREVIOUS_VERSION=0.15.0
-export ATRIUM_VERSION=0.15.0
+export ATRIUM_VERSION=0.16.0
 find ./ -name "*.md" | xargs perl -0777 -i \
    -pe "s@$ATRIUM_PREVIOUS_VERSION@$ATRIUM_VERSION@g;" \
    -pe "s@tree/master@tree/v$ATRIUM_VERSION@g;" \
@@ -580,10 +580,11 @@ perl -0777 -i \
   ../atrium-gh-pages/README.md
 cd ../atrium-gh-pages
 git add . && git commit -m "v$ATRIUM_VERSION"
-cd ../atrium
 
 check changes
 git push
+
+cd ../atrium
 
 alternatively the manual steps:
     a) gr ghPages
@@ -613,7 +614,7 @@ Prepare next dev cycle
 Either use the following commands or the manual steps below
 
 export ATRIUM_VERSION=0.15.0
-export ATRIUM_NEXT_VERSION=0.15.0
+export ATRIUM_NEXT_VERSION=0.16.0
 find ./ -name "*.md" | xargs perl -0777 -i \
    -pe "s@tree/v$ATRIUM_VERSION@tree/master@g;" \
    -pe "s@$ATRIUM_VERSION/doc@latest#/doc@g;" \
