build: add reminder to check whether copying Node.JS dependencies is still necessary
Co-authored-by: Robert Stoll <rstoll@tutteli.ch>

--- a/build.gradle
+++ b/build.gradle
@@ -444,6 +444,7 @@ def createJsTestTask(String... subprojectNames) {
             from compileKotlin2Js.destinationDir
 
             prefixedProject('verbs-internal-js').afterEvaluate {
+                // TODO 0.16.0 or 0.17.0, check if still required with the new Kotlin MPP plugin
                 configurations.testRuntimeClasspath.allDependencies.withType(ProjectDependency).each {
                     dependsOn(it.dependencyProject.assemble)
                 }
