--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -47,9 +47,10 @@ jobs:
                 run: ATRIUM_ANDROID_JAR="$PWD/android-jar-cache/android.jar" ./gradlew checkDexer
                 shell: bash
 
-            -   name: composite build atrium-scala2
-                run: ./gradlew build
-                working-directory: misc\tools\atrium-scala2-test
+# TODO 0.16.0 or 0.17.0 re-activate scala API
+#            -   name: composite build atrium-scala2
+#                run: ./gradlew build
+#                working-directory: misc\tools\atrium-scala2-test
 
             -   name: Upload windows build code coverage
                 uses: codecov/codecov-action@v1
