introduce bc-tests which compile also specs, setup for 0.14.0
moreover:
- rename DeprecationSpek2TestEngine to Spek2ForgivingTestEngine

bcTests will fail with this commit due to:
- missing `contains all` function in api-infix (a bug)
- StaticName which is internal and not accessible from the new project

--- a/.github/workflows/bc-ubuntu.yml
+++ b/.github/workflows/bc-ubuntu.yml
@@ -16,6 +16,8 @@ jobs:
           java-version: ${{env.JAVA_VERSION}}
 
       - name: bcTests
+        env:
+          BC: 1
         run: ./gradlew bcTests
 
       - name: Upload windows build code coverage
