--- a/build.gradle
+++ b/build.gradle
@@ -9,18 +9,18 @@ buildscript {
         // main
         kbox_version = '0.15.1'
         kbox = { "ch.tutteli.kbox:kbox:$kbox_version" }
-        niok_version = '1.4.0'
-        niok = { "ch.tutteli.niok:niok:$niok_version" }
+        niokVersion = '1.4.0'
+        niok = { "ch.tutteli.niok:niok:$niokVersion" }
         kotlin_version = '1.3.72'
 
         // test
         jacoco_tool_version = '0.8.6'
-        junit_platform_version = '1.7.0'
-        jupiter_version = '5.7.0'
-        spek2_version = '2.0.12'
-        spekExtensions_version = '1.2.1'
-        spekExtensions = { "ch.tutteli.spek:tutteli-spek-extensions:$spekExtensions_version" }
-        mockk_version = '1.10.0'
+        junitPlatformVersion = '1.7.0'
+        jupiterVersion = '5.7.0'
+        spek2Version = '2.0.12'
+        spekExtensionsVersion = '1.2.1'
+        spekExtensions = { "ch.tutteli.spek:tutteli-spek-extensions:$spekExtensionsVersion" }
+        mockkVersion = '1.10.0'
 
         //TODO remove with 1.0.0
         mockito_kotlin_version = '2.2.0'
@@ -125,10 +125,10 @@ configurations {
 dependencies {
     // helps dependabot to recognise versions which it should update
     dependabot "org.jacoco:org.jacoco.core:$jacoco_tool_version"
-    dependabot "org.junit.jupiter:junit-jupiter-engine:$jupiter_version"
-    dependabot "org.junit.platform:junit-platform-console:$junit_platform_version"
-    dependabot "ch.tutteli.spek:tutteli-spek-extensions:$spekExtensions_version"
-    dependabot "ch.tutteli.niok:niok:$niok_version"
+    dependabot "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
+    dependabot "org.junit.platform:junit-platform-console:$junitPlatformVersion"
+    dependabot "ch.tutteli.spek:tutteli-spek-extensions:$spekExtensionsVersion"
+    dependabot "ch.tutteli.niok:niok:$niokVersion"
     dependabot "ch.tutteli.kbox:kbox:$kbox_version"
 
     //TODO remove with 1.0.0
@@ -137,6 +137,8 @@ dependencies {
 }
 
 subprojects {
+    group = rootProject.group
+
     repositories {
         mavenCentral()
         jcenter()
@@ -165,7 +167,10 @@ configureAndroidProjects()
 configureJsProjects()
 configureJvmProjects()
 
-configure(subprojects - multiplatformProjects) {
+configure(subprojects.findAll {
+    def parentName = it.projectDir.parentFile.name
+    it.name != "bc-tests" && parentName != "old" && parentName != "bc-tests"
+} - multiplatformProjects) {
     apply plugin: 'kotlin'
     dependencies {
         implementation kotlinStdlib()
@@ -258,7 +263,7 @@ configure(subprojects - bundleSmokeTests - toolProjects) { subproject ->
 
 configure(jacocoMulti.jacocoProjects + getAndroidProjects()) {
     apply plugin: 'ch.tutteli.spek'
-    spek.version = spek2_version
+    spek.version = spek2Version
 
     dependencies {
         testImplementation mockito(), excludeKotlin
@@ -452,7 +457,7 @@ createJsTestTask(
 def useJupiter(String... projectNames) {
     configure(projectNamesToProject(projectNames)) {
         dependencies {
-            testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiter_version"
+            testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
         }
         test {
             options {
@@ -467,14 +472,6 @@ useJupiter(
     'api-fluent-en_GB-jvm',
     'api-infix-en_GB-jvm',
 )
-
-def buildNonDeprecatedJvm = task('buildNonDeprecatedJvm', group: 'build', description: 'builds all JVM modules')
-buildNonDeprecatedJvm.dependsOn(jacocoMulti.jacocoProjects.findAll {
-    !it.projectDir.path.contains("\\deprecated\\") && !it.projectDir.path.contains("/deprecated/")
-}.collect { it.build })
-
-def buildAllWithoutJs = task('buildAllWithoutJs', group: 'build', description: 'builds all modules without -js modules')
-buildAllWithoutJs.dependsOn((subprojects - getJsProjects()).collect { it.build })
 
 def getSubprojectTasks(String name) {
     return subprojects.collect { it.tasks.findByName(name) }.findAll { it != null }
