--- a/misc/tools/readme-examples/build.gradle
+++ b/misc/tools/readme-examples/build.gradle
@@ -6,10 +6,10 @@ repositories {
 
 apply plugin: 'kotlin'
 dependencies {
-    implementation "org.junit.platform:junit-platform-console-standalone:$junit_platform_version"
-    implementation "org.spekframework.spek2:spek-dsl-jvm:$spek2_version"
-    implementation "org.spekframework.spek2:spek-runner-junit5:$spek2_version"
-    implementation "org.spekframework.spek2:spek-runtime-jvm:$spek2_version"
+    implementation "org.junit.platform:junit-platform-console-standalone:$junitPlatformVersion"
+    implementation "org.spekframework.spek2:spek-dsl-jvm:$spek2Version"
+    implementation "org.spekframework.spek2:spek-runner-junit5:$spek2Version"
+    implementation "org.spekframework.spek2:spek-runtime-jvm:$spek2Version"
     runtimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     implementation kotlinStdlib()
