move bbc tests into bc-tests, remove bc-test
moreover:
- rename TestEngine id from spek2-deprecation to spek2-forgiving

--- a/.github/workflows/bbc-ubuntu.yml
+++ b/.github/workflows/bbc-ubuntu.yml
@@ -16,6 +16,8 @@ jobs:
           java-version: ${{env.JAVA_VERSION}}
 
       - name: bbcTests
+        env:
+          BC: 1
         run: ./gradlew bbcTests
 
       - name: Upload windows build code coverage
