re-add jacoco coverage to bc and bbc tests
and fix dependency to translations for infix, should also use de_CH in
bc-tests

--- a/.github/workflows/bbc-ubuntu.yml
+++ b/.github/workflows/bbc-ubuntu.yml
@@ -18,7 +18,7 @@ jobs:
       - name: bbcTests
         env:
           BC: 1
-        run: ./gradlew bbcTests
+        run: ./gradlew bbcTests --stacktrace
 
       - name: Upload windows build code coverage
         uses: codecov/codecov-action@v1
