--- a/gradle/scripts/jacoco-multi-project.gradle
+++ b/gradle/scripts/jacoco-multi-project.gradle
@@ -2,7 +2,7 @@ apply plugin: 'kotlin'
 apply plugin: 'jacoco'
 
 jacoco {
-    toolVersion = "$jacoco_tool_version"
+    toolVersion = "$jacocoToolVersion"
 }
 
 def jacocoProjects = (jacocoMulti.jacocoProjects)
