do no longer build against jdk 9 we drop support for it

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        java_version: [ 9, 11, 14 ]
+        java_version: [ 11, 14 ]
 
     steps:
       - uses: actions/checkout@v2
