--- a/.github/workflows/check-generated-committed.yml
+++ b/.github/workflows/check-generated-committed.yml
@@ -11,16 +11,12 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        java_version: [ 11 ]
     steps:
       - uses: actions/checkout@v2
-      - name: "Set up JDK ${{ matrix.java_version }}"
+      - name: "Set up JDK 11"
         uses: actions/setup-java@v1
         with:
-          java-version: ${{ matrix.java_version }}
+          java-version: 11
 
       - name: check generateLogic committed
         run: ./gradle/scripts/check-generateLogic-committed.sh
