--- a/.github/workflows/bc-ubuntu.yml
+++ b/.github/workflows/bc-ubuntu.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Upload windows build code coverage
         uses: codecov/codecov-action@v1
+        if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'master') }}
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: bc
