deprecate ExpectBuilder and introduce RootExpectBuilder in logic

--- a/misc/verbs-internal/atrium-verbs-internal-jvm/build.gradle
+++ b/misc/verbs-internal/atrium-verbs-internal-jvm/build.gradle
@@ -1,8 +1,8 @@
 description = 'Specifies the internally used assertion verbs'
 
 dependencies {
-    api prefixedProject('domain-builders-jvm')
     api prefixedProject('core-api-jvm')
+    api prefixedProject('logic-jvm')
 
     runtimeOnly prefixedProject('core-robstoll-jvm')
 
