--- a/misc/verbs-internal/atrium-verbs-internal-common/build.gradle
+++ b/misc/verbs-internal/atrium-verbs-internal-common/build.gradle
@@ -2,8 +2,9 @@ description = 'Specifies the internally used assertion verbs as common module'
 
 dependencies {
     api prefixedProject('core-api-common')
-    api prefixedProject('domain-builders-common')
+    api prefixedProject('logic-common')
 
+    //TODO remove with 0.16.0
     runtimeOnly prefixedProject('core-robstoll-common')
 
     testImplementation prefixedProject('specs-common')
