--- a/misc/verbs-internal/atrium-verbs-internal-js/build.gradle
+++ b/misc/verbs-internal/atrium-verbs-internal-js/build.gradle
@@ -2,7 +2,7 @@ description = 'Specifies the internally used assertion verbs for the JS platform
 
 dependencies {
     api prefixedProject('core-api-js')
-    api prefixedProject('domain-builders-js')
+    api prefixedProject('logic-js')
 
     runtimeOnly prefixedProject('core-robstoll-js')
 
