--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -25,9 +25,9 @@ jobs:
       #                run: ./gradlew build
       #                working-directory: misc/tools/atrium-scala2-test
 
-      - name: Upload windows build code coverage
+      - name: Upload build code coverage
         uses: codecov/codecov-action@v1
-        if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'master') }}
+        if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/master') }}
         env:
           JAVA_VERSION: ${{ matrix.java_version }}
         with:
