--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Upload windows build code coverage
         uses: codecov/codecov-action@v1
-        if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'master') }}
+        if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/master') }}
         env:
           JAVA_VERSION: ${{ matrix.java_version }}
         with:
