improve error message for TranslatableWithArgs and cover with tests
moreover:
- also cover the behaviour of Text

--- a/bundles/fluent-en_GB/atrium-fluent-en_GB-jvm/build.gradle
+++ b/bundles/fluent-en_GB/atrium-fluent-en_GB-jvm/build.gradle
@@ -1,5 +1,19 @@
 description = 'Represents a convenience module which merely bundles dependencies for the JVM platform.'
 
+ext.jacoco_additional = [
+    prefixedProject('verbs-jvm'),
+    prefixedProject('translations-en_GB-jvm'),
+    prefixedProject('logic-jvm'),
+    prefixedProject('core-api-jvm'),
+    //TODO remove with 0.17.0
+    prefixedProject('domain-builders-jvm'),
+    prefixedProject('domain-robstoll-jvm'),
+    prefixedProject('domain-robstoll-lib-jvm'),
+    prefixedProject('domain-api-jvm'),
+    prefixedProject('core-robstoll-jvm'),
+    prefixedProject('core-robstoll-lib-jvm'),
+]
+
 dependencies {
     api prefixedProject('verbs-jvm')
     api prefixedProject('api-fluent-en_GB-jvm')
