--- a/apis/fluent-en_GB/atrium-api-fluent-en_GB-jvm/build.gradle
+++ b/apis/fluent-en_GB/atrium-api-fluent-en_GB-jvm/build.gradle
@@ -3,9 +3,12 @@ description = 'A fluent assertion function API in en_GB with a focus on code com
 ext.jacoco_additional = [
     prefixedProject('translations-en_GB-jvm'),
     prefixedProject('logic-jvm'),
+    prefixedProject('core-api-jvm'),
+    //TODO remove with 0.17.0
     prefixedProject('domain-builders-jvm'),
     prefixedProject('domain-robstoll-jvm'),
     prefixedProject('domain-robstoll-lib-jvm'),
+    prefixedProject('domain-api-jvm'),
     prefixedProject('core-robstoll-jvm'),
     prefixedProject('core-robstoll-lib-jvm'),
 ]
