--- a/apis/infix-en_GB/atrium-api-infix-en_GB-jvm/build.gradle
+++ b/apis/infix-en_GB/atrium-api-infix-en_GB-jvm/build.gradle
@@ -2,9 +2,13 @@ description = 'An infix API in en_GB with a focus on code completion for JVM.'
 
 ext.jacoco_additional = [
     prefixedProject('translations-de_CH-jvm'),
+    prefixedProject('logic-jvm'),
+    prefixedProject('core-api-jvm'),
+    //TODO remove with 0.17.0
     prefixedProject('domain-builders-jvm'),
     prefixedProject('domain-robstoll-jvm'),
     prefixedProject('domain-robstoll-lib-jvm'),
+    prefixedProject('domain-api-jvm'),
     prefixedProject('core-robstoll-jvm'),
     prefixedProject('core-robstoll-lib-jvm'),
 ]
