move MetaFeature to logic and MetaFeatureOption to APIs

--- a/core/robstoll-lib/atrium-core-robstoll-lib-js/build.gradle
+++ b/core/robstoll-lib/atrium-core-robstoll-lib-js/build.gradle
@@ -17,5 +17,6 @@ dependencies {
 //TODO 0.17.0 or 0.18.0 should not be necessary https://youtrack.jetbrains.com/issue/KT-27797
 compileTestKotlin2Js.dependsOn(
     prefixedProject('core-robstoll-js').jar,
-    prefixedProject('domain-robstoll-js').jar
+    prefixedProject('domain-robstoll-js').jar,
+    prefixedProject('domain-builders-js').jar
 )
