update packges.md and add missing KDoc

--- a/gradle/scripts/gh-pages.gradle
+++ b/gradle/scripts/gh-pages.gradle
@@ -66,10 +66,11 @@ dokka {
     }
 
     [
-        "ch.tutteli.atrium.creating.impl",
         "ch.tutteli.atrium.api.verbs.internal",
         //TODO remove the below with 0.17.0
         "ch.tutteli.atrium.domain.builders.reporting.impl",
+        //TODO remove with 0.18.0
+        "ch.tutteli.atrium.assertions.builders.impl",
 
     ].each { pkg ->
         packageOptions {
