--- a/gradle/scripts/gh-pages.gradle
+++ b/gradle/scripts/gh-pages.gradle
@@ -51,7 +51,7 @@ dokka {
         println "====================="
     }
     linkMapping {
-        dir = './'
+        dir = rootProject.projectDir.absolutePath
         url = "$github_url/$dokka_sourceMapping/"
         suffix = '#L'
     }
