--- a/build.gradle
+++ b/build.gradle
@@ -334,7 +334,7 @@ def createJsTestTask(String... subprojectNames) {
             from compileKotlin2Js.destinationDir
 
             prefixedProject('verbs-internal-js').afterEvaluate {
-                // TODO 0.17.0 or 0.18.0, check if still required with the new Kotlin MPP plugin
+                // TODO 0.18.0, check if still required with the new Kotlin MPP plugin
                 configurations.testRuntimeClasspath.allDependencies.withType(ProjectDependency).each {
                     dependsOn(it.dependencyProject.assemble)
                 }
