--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -43,7 +43,7 @@ jobs:
               exit -1
           }
 
-      - name: check Atrium's -android.jar can be dexed
+      - name: check Atrium's -jvm.jar can be dexed
         run: ATRIUM_ANDROID_JAR="$PWD/android-jar-cache/android.jar" ./gradlew checkDexer
         shell: bash
 
