--- a/build.gradle
+++ b/build.gradle
@@ -282,7 +282,10 @@ configure(subprojects - toolProjects) {
     }
 }
 
-apply from: 'gradle/scripts/check-dexer.gradle'
+// takes some time to configure since gradle 6.9 so only if CI
+if (Boolean.parseBoolean(System.getenv('CI'))) {
+    apply from: 'gradle/scripts/check-dexer.gradle'
+}
 apply from: 'gradle/scripts/gh-pages.gradle'
 apply from: 'gradle/scripts/jacoco-multi-project.gradle'
 
