--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         // main
         kbox_version = '0.15.1'
         kbox = { "ch.tutteli.kbox:kbox:$kbox_version" }
-        niokVersion = '1.4.6'
+        niokVersion = '1.4.7'
         niok = { "ch.tutteli.niok:niok:$niokVersion" }
         kotlin_version = '1.3.72'
 
@@ -89,8 +89,7 @@ buildscript {
     }
 
     repositories {
-        mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
